src/test/ui/match/match-vec-mismatch-2.rs
fn main() {
    match () {
        [()] => { }
        //~^ ERROR expected an array or slice, found `()`
    }
}
